qa-automation-suite/qa-automation-suite/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testgenie
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: testgenie
  template:
    metadata:
      labels:
        app: testgenie
    spec:
      containers:
        - name: testgenie
          image: nginx:latest
          ports:
            - containerPort: 8080
