qa-automation-suite/qa-automation-suite/app2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: hashicorp/http-echo:latest
          args: ["-text=Hello from App2!"]
          ports:
            - containerPort: 5678
