qa-automation-suite/qa-automation-suite/chrome-node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chrome-node
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chrome-node
  template:
    metadata:
      labels:
        app: chrome-node
    spec:
      containers:
        - name: chrome-node
          image: selenium/node-chrome:4.1.0
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 2Gi
