qa-automation-suite/qa-automation-suite/firefox-node-deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: firefox-node
    namespace: default
  spec:
    replicas: 3
    selector:
      matchLabels:
        app: firefox-node
    template:
      metadata:
        labels:
          app: firefox-node
      spec:
        containers:
          - name: firefox-node
            image: selenium/node-firefox:4.1.0
            volumeMounts:
              - mountPath: /dev/shm
                name: dshm
        volumes:
          - name: dshm
            emptyDir:
              medium: Memory
              sizeLimit: 2Gi
