qa-automation-suite/qa-automation-suite/pv-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pv-pod
spec:
  containers:
    - name: pv-container
      image: busybox
      command: ["sh", "-c", "echo Hello Kubernetes! > /data/test.txt && sleep 3600"]
      volumeMounts:
        - name: demo-storage
          mountPath: "/data"
  volumes:
    - name: demo-storage
      persistentVolumeClaim:
        claimName: demo-pvc
