qa-automation-suite/qa-automation-suite/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: testgenie-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: testgenie
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
