qa-automation-suite/qa-automation-suite/selenium-hub-service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: selenium-hub
    namespace: default
  spec:
    selector:
      app: selenium-hub
    ports:
      - name: listener
        port: 4444
        targetPort: 4444
      - name: publisher
        port: 4442
        targetPort: 4442
      - name: subscriber
        port: 4443
        targetPort: 4443
    type: ClusterIP
