qa-automation-suite/qa-automation-suite/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: demo.local
      http:
        paths:
         - path: /app1
           pathType: Prefix
           backend:
             service:
               name: app1-svc
               port:
                 number: 80
         - path: /app2
           pathType: Prefix
           backend:
             service:
               name: app2-svc
               port:
                 number: 80
